# raptor-rag

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  devbox.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  _base.py  _metrics.py  _progress.py  _test_gpt5mini.py  _tree_cache.py  results_frames.json  results_frames_haiku.json  results_narrativeqa.json  results_narrativeqa_haiku.json  results_qasper.json  results_qasper_haiku.json  results_quality.json  results_quality_baseline.json  results_quality_baseline_4omini.json  results_quality_baseline_gpt5mini.json  results_quality_haiku.json  results_quality_reranked.json  results_quality_reranked_4omini.json  results_quality_reranked_gpt5mini.json  run_compression.py  run_frames.py  run_narrativeqa.py  run_qasper.py  run_quality.py
docs/: blog-raptor-rag.md
integrations/langchain-raptor-rag/: README.md  pyproject.toml
integrations/langchain-raptor-rag/langchain_raptor_rag/: __init__.py  retriever.py
integrations/langchain-raptor-rag/tests/: test_integration.py  test_retriever.py
integrations/llama-index-raptor-rag/: README.md  pyproject.toml
integrations/llama-index-raptor-rag/llama_index_raptor_rag/: retriever.py
integrations/llama-index-raptor-rag/tests/: test_integration.py  test_retriever.py
notebooks/: 01_basic_usage.ipynb  02_advanced_usage.ipynb
raptor/: __init__.py  cluster_tree_builder.py  cluster_utils.py  embedding_models.py  faiss_retriever.py  qa_models.py  reranker.py  retrieval_augmentation.py  summarization_models.py  tree_builder.py  tree_retriever.py  tree_structures.py  utils.py
tests/: conftest.py  test_benchmark_metrics.py  test_cluster_utils.py  test_config.py  test_integration.py  test_models.py  test_reranker.py  test_text_splitter.py  test_tree_structures.py  test_utils.py
